[tool.poetry]
name = "pitonium_bot"
version = "0.1.0"
description = "My First Python bot for Telegram"
authors = ["lport@frtk.ru"]
repository = "https://github.com/LyuPo7/python-project-lvl3"
packages = [
  { include = "pitonium" },
]
[tool.poetry.dependencies]
python = "^3.6"
pytelegrambotapi = "^3.8.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pitonium = "pitonium.scripts.pitonium_bot:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
